[FIX] catalog: blurry pets and backgrounds

--- a/media/pet_catalog/css/style.css
+++ b/media/pet_catalog/css/style.css
@@ -23,6 +23,10 @@ body {
     -webkit-user-drag: none;
 }
 
+img {
+    image-rendering: pixelated;
+}
+
 .nav {
     --bs-link-color: #c29a5d !important;
     --bs-link-hover-color: #a87d41 !important;
